# testIPC

./: .gitignore  README.md  buildAll.sh  buildGateway.sh  buildLib1.sh  buildLib2.sh  buildLibC.sh  buildSmLib.sh  buildTester.sh  run0Param.sh  run1Param.sh  run2Params.sh  runUnknownService.sh
_prelim/common/: memHelper_t.h  paramComm.h  processHelper.h  readHelper.h  reader.h  resHelper.h  writeHelper.h  writer.h
_prelim/get/: CMakeLists.txt  main.cpp
_prelim/set/: CMakeLists.txt  main.cpp
agent1/: CMakeLists.txt  libHandler.h  libHandlerCommon.h  libHandler_Win.h  main.cpp  osSelector.h
common/: envHelper.h  ipcH.h  libCommon.h  libHandler.h  libHandlerCommon.h  libHandler_Nix.h  libHandler_Win.h  osSelector.h  processH.h  processHelper.h  resHelper.h  strHelper.h  types.h
gateway/: CMakeLists.txt  gateway.h  main.cpp
lib1/: CMakeLists.txt  lib1.cpp  lib1.h  lib1_global.h
lib2/: CMakeLists.txt  lib2.cpp
libC/: CMakeLists.txt  libC.cpp
smLib/: CMakeLists.txt  memHelper.h  memHelper_t.h  readHelper.cpp  readHelper.h  reader.cpp  reader.h  resHelper.h  sem.h  sm.cpp  sm_public.h  writeHelper.cpp  writeHelper.h  writer.cpp  writer.h
tester/: CMakeLists.txt  main.cpp
